135		C++			Fixed bug where parser would still look for curly brackets in comments.
136		C++			No longer tries to open "." and "..".
137		C++			Really outputs pops in unowned provinces.
138		C++			New start date: December 12, 1835. Should allow politics to kick-start better.
139		C++			RGO pops start employed.
140		C++			Change log.
141		C++			Updating ReadMe.txt
142		C++			Parser now handles single-line top-level objects.
143		C++			Eliminated need for region.txt, pulls info from V2 install instead.
144		C++			Excluded unneeded files from the project (but keeping them in case they're useful later).
145		C++			Simplified dependencies.
146		C++			Province numbers and names come from V2 install.
147		C++			Cleaned up the output a bit.
148		C++			Fixed Capitals problem from change 146.
149		C++			Added logging during country mapping.
150		C++			RGO type from V2 install.
151		C++			Liferatings from V2 install.
152		C++			Removed unnecessary files from build.
153		C++			Get province names the right way.
154		C++			Changleog now included in build.
155		C++			Cleaned up old province name code.
156		C++			Cores!
157		C++			RGO and pops start with money.
158		C++			Landless but cored nations now convert (until we run out of tags).
159		C++			If a landless nations' culture is gone from its cores, the nation is removed.
160		C++			Removed all that logging about the state creation process.
161		C++			Blocked nations list.
162		C++			Cultural union nations.
163		C++			Removed some unneeded files.
164		C++			unions.txt now copied into build folder.
165		C++			Flushing log output in case of disaster.
166		C++			Fixed another parser bug.
167		C++			Added all V2 cultural unions.
168		C++			More landless nations removed.
169		C++			All nations formed by decision now blocked during conversion.
170		C++			Landless nations no longer considered in tech conversion.
171		C++			Daimyos get merged into Japan.